# bpf-prime

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  Makefile  README.md  analyze_benchmark.ipynb  analyze_benchmark.py  bpf-prime-compile  mprotect_test.cpp  project.cmake
BPFPrimeTest/: CMakeLists.txt  Main.cpp  README.md
BPFPrimeTest/Top/: BPFPrimeTestPackets.fppi  BPFPrimeTestTopology.cpp  BPFPrimeTestTopology.hpp  BPFPrimeTestTopologyDefs.hpp  CMakeLists.txt  instances.fpp  topology.fpp
Components/: CMakeLists.txt
Components/BpfSequencer/: BpfSequencer.cpp  BpfSequencer.fpp  BpfSequencer.hpp  BpfSequencerCommands.fppi  BpfSequencerEvents.fppi  BpfSequencerMapCommands.fppi  BpfSequencerMapEvents.fppi  CMakeLists.txt  bpf.hpp  bpfwrappers.cpp  iter_bpf_helpers.cpp  vm.hpp
Components/BpfSequencer/maps/: array_map.cpp  array_map.hpp  hash_map.cpp  hash_map.hpp  map_bpf_helpers.cpp  map_lddw_helpers.cpp  maps.cpp  maps.hpp  pooled_hash_map.cpp  pooled_hash_map.hpp  shared_mutex.cpp  shared_mutex.hpp
Components/BpfSequencer/maps/hash/murmurhash2/: MurmurHash2.cpp  MurmurHash2.h
Components/LLVMSequencer/: CMakeLists.txt  FppConstantsAc.cpp  FppConstantsAc.hpp  LLVMSequencer.cpp  LLVMSequencer.fpp  LLVMSequencer.hpp  LLVMSequencerCommands.fppi  LLVMSequencerEvents.fppi  LLVMSequencerMapCommands.fppi  LLVMSequencerMapEvents.fppi  LLVMSequencerStateMachine.cpp  LLVMSequencerStateMachine.fppi  bpf.hpp  bpfwrappers.cpp
Components/LLVMSequencer/docs/: sdd.md
Components/LLVMSequencer/maps/: array_map.cpp  array_map.hpp  hash_map.cpp  hash_map.hpp  hash_map_key.cpp  map_bpf_helpers.cpp  map_lddw_helpers.cpp  maps.cpp  maps.hpp  pooled_hash_map.cpp  pooled_hash_map.hpp  shared_mutex.hpp
Components/LLVMSequencer/maps/hash/murmurhash2/: MurmurHash2.cpp  MurmurHash2.h
Components/LLVMSequencer/tests/hashmap/: program.bpf.c
Components/LLVMSequencer/tests/kalman/: program.bpf.c  program.bpf.ll
Components/LLVMSequencer/tests/low_pass_filter/: program.bpf.c
Components/LLVMSequencer/tests/matmul/: program.bpf.c  program.bpf.ll
Components/Tests/: Aberr.cpp  Aes.cpp  CMakeLists.txt  Kalman.cpp  Kalman.hpp  LowPassFilter.cpp  LowPassFilter.hpp  Matmul.cpp  Matmul.hpp  NCCScore.cpp  NCCScore.hpp  NativeTests.hpp  StarTracker.cpp  StarTracker.hpp  Tests.cpp  Tests.fpp  Tests.hpp  testsWrappers.cpp
Components/WasmSequencer/: CMakeLists.txt  WasmSequencer.cpp  WasmSequencer.fpp  WasmSequencer.hpp  wasmWrappers.cpp
LLVMSequencer/: README.md
LLVMSequencer/Components/LLVMSequencer/: CMakeLists.txt  LLVMSequencer.cpp  LLVMSequencer.fpp  LLVMSequencerCommands.fppi
LLVMSequencer/Components/LLVMSequencer/llvmbpf/: CMakeLists.txt
LLVMSequencer/Components/LLVMSequencer/llvmbpf/include/: llvmbpf.hpp
LLVMSequencer/Components/LLVMSequencer/llvmbpf/src/: llvm_jit_context.cpp
LLVMSequencerTest/: CMakeLists.txt  Main.cpp  README.md
LLVMSequencerTest/Top/: CMakeLists.txt  LLVMSequencerTestPackets.xml  LLVMSequencerTestTopology.cpp  LLVMSequencerTestTopology.hpp  LLVMSequencerTestTopologyDefs.hpp  instances.fpp  topology.fpp
Ports/: BenchmarkPorts.fpp  CMakeLists.txt
cmake/toolchain/: .gitignore  README.md  riscv.cmake
compiler/: llvm-compile
tests/: .clangd  Makefile  README.md  benchmark.seq  bpf_shim.h  cache_policy_test.c  runtime_test.c  setup.seq  wasm_shim.h
tests/abber/: program.bpf.c  program.bpf.ll
tests/aberr/: a.wasm  program.bpf.c  program.bpf.ll  program.wasm.c
tests/aes/: a.wasm  program.bpf.c  program.bpf.ll  program.wasm.c
tests/arraymap/: program.bpf.c
tests/hashmap/: program.bpf.c
tests/hashmap_test/: program.bpf.c
tests/kalman/: a.wasm  program.bpf.c  program.bpf.ll  program.wasm.c  sequence.seq
tests/low_pass_filter/: a.wasm  program.bpf.c  program.bpf.ll  program.wasm.c  sequence.seq
tests/map_lookup/: program.bpf.c
tests/matmul/: a.wasm  program.bpf.c  program.bpf.ll  program.chroot.c  program.wasm.c  sequence.seq
tests/nccscore/: a.wasm  program.bpf.c  program.bpf.ll  program.wasm  program.wasm.c
tests/startracker/: a.wasm  program.bpf.c  program.bpf.ll  program.wasm.c
toolchain/: README.md  riscv.cmake
